# AzureCppUtils

./: .gitignore  .gitmodules  AzureCppUtils.sln  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  azure-pipelines.yml  vcpkg.json  vcpkg_response.txt
.github/workflows/: codeql-analysis.yml
docs/: Doxyfile  mainpage.md
docs/html/: annotated.html  annotated_dup.js  azure-cpp-utils_8hpp.html  azure-cpp-utils_8hpp.js  azure-cpp-utils_8hpp_source.html  base64-utils_8hpp.html  base64-utils_8hpp.js  base64-utils_8hpp_source.html  classes.html  conversion-utils_8hpp.html  conversion-utils_8hpp.js  conversion-utils_8hpp_source.html  date-utils_8hpp.html  date-utils_8hpp.js  date-utils_8hpp_source.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  encryption-utils_8hpp.html  encryption-utils_8hpp.js  encryption-utils_8hpp_source.html  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_defs.html  index.html  mainpage_8md.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacesiddiqsoft.html  namespacesiddiqsoft.js  navtreedata.js  navtreeindex0.js  structsiddiqsoft_1_1_base64_utils-members.html  structsiddiqsoft_1_1_base64_utils.html  structsiddiqsoft_1_1_base64_utils.js  (+18 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  (+1 more)
include/siddiqsoft/: azure-cpp-utils.hpp  base64-utils-unix.hpp  base64-utils-win.hpp  base64-utils.hpp  conversion-utils.hpp  date-utils.hpp  encryption-utils-unix.hpp  encryption-utils-win.hpp  encryption-utils.hpp  url-utils.hpp
nuget/: SiddiqSoft.AzureCppUtils.nuspec
pack/: CMakeCommonHelpers.cmake  SiddiqSoft.AzureCppUtils.nuspec
src/: azure-cpp-utils.hpp  base64-utils.hpp  date-utils.hpp  encryption-utils.hpp  url-utils.hpp
src/docs/: Doxyfile
tests/: CMakeLists.txt  base64-utils-tests.cpp  basic_tests.vcxproj  date-utils-tests.cpp  encryption-utils-tests.cpp  packages.config  test.cpp  test.ps1  url-utils-tests.cpp
